syntax = "proto3";

option csharp_namespace = "DataBreezeBalancer.Grpc";

package breezeCache;

service DataBreezeRpcForBalancer {
  rpc Get(GetRequestBalancer) returns (GetResponseBalancer);
  rpc Save(SaveRequestBalancer) returns (SaveResponseBalancer);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Remove(RemoveRequestBalancer) returns (RemoveResponseBalancer);
  rpc Update(UpdateRequestBalancer) returns (UpdateResponseBalancer);
}

message RegisterRequest {
  string address = 1;
}
message RegisterResponse {
  bool result = 1;
}
message SaveRequestBalancer{
  int32 id = 1;
  string data = 2;
}

message SaveResponseBalancer {
  bool isSuccess = 1;
}

message GetRequestBalancer {
  int32 id = 1;
}

message GetResponseBalancer {
  string cachedData = 1;
}

message RemoveRequestBalancer {
  int32 id = 1;
}

message RemoveResponseBalancer {
  bool removed = 1;
}

message UpdateRequestBalancer {
  int32 id = 1;
  string data = 2;
}

message UpdateResponseBalancer {
  bool updated = 1;
}