syntax = "proto3";

option csharp_namespace = "DataBreeze.Grpc";

package breezeCache;

service DataBreezeRpc {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Save(SaveRequest) returns (SaveResponse);
}

message SaveRequest {
  int32 id = 1;
  string data = 2;
}

message SaveResponse {
  bool isSuccess = 1;
}

message GetRequest {
  int32 id = 1;
}

message GetResponse {
  string cachedData = 1;
}
